plugins {
    java
}

group = "com.xiaobai1226"
version = "0.2.0"
description = "家庭网盘项目"
java.sourceCompatibility = JavaVersion.VERSION_21

allprojects {
    repositories {
        mavenCentral()
    }
}